fix: test ios not showing kebab icon

--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -46,6 +46,10 @@
   padding: 0.5rem;
 }
 
+.list-editor {
+  margin-block-end: 1em;
+}
+
 .list-editor > summary {
   font-size: 1rem;
   inline-size: fit-content;
